--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 				</nav>
 			</header>
 			<main>
-				<div id="background"></div>
+				<div id="background">
 				<div id="texte">
 					<p><strong>Plus loin que la nuit et le jour</strong></p>
 				</div>
+            </div>
 				<section id="Bot_main">
 					<div id="type_voyageur">
 						<p>Quel type de voyageur êtes-vous?</p>
