--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Dosis:wght@200..800&family=Oleo+Script:wght@400;700&display=swap"
 				rel="stylesheet"
 			/>
-			<title>Partiel_1</title>
+			<title>Partiel_1/ Seene Allan Cir1</title>
 		</head>
 		<body>
 			<header>
@@ -36,10 +36,10 @@
 			</header>
 			<main>
 				<div id="background">
-				<div id="texte">
-					<p><strong>Plus loin que la nuit et le jour</strong></p>
+					<div id="texte">
+						<p><strong>Plus loin que la nuit et le jour</strong></p>
+					</div>
 				</div>
-            </div>
 				<section id="Bot_main">
 					<div id="type_voyageur">
 						<p>Quel type de voyageur êtes-vous?</p>
@@ -62,9 +62,11 @@
 							</figure>
 						</section>
 					</div>
-					<div id="Bas_page">
-					<button><p>C'est parti!</p></button>
-                </div>
+					<div class="parallax">
+						<div id="Bas_page">
+							<button><p>C'est parti!</p></button>
+						</div>
+					</div>
 				</section>
 			</main>
 			<footer>
